--- a/.github/workflows/enhanced-security-scan.yml
+++ b/.github/workflows/enhanced-security-scan.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Pull latest image
       run: |
-        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest || echo "No latest tag yet"
         echo "Image pulled successfully"
 
     - name: Run ${{ matrix.tool }} scan
