--- a/.github/workflows/enhanced-security-scan.yml
+++ b/.github/workflows/enhanced-security-scan.yml
@@ -22,9 +22,6 @@ permissions:
 jobs:
   enhanced-scan:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        tool: [grype, trivy, snyk]
 
     steps:
     - name: Checkout repository
@@ -33,43 +30,30 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
+    - name: Build image locally for scanning (no push)
+      id: build
+      uses: docker/build-push-action@v5
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        context: .
+        file: ./external/gateway/Dockerfile
+        push: false
+        load: true
+        tags: local-scan:${{ github.sha }}
 
-    - name: Pull latest image
-      run: |
-        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest || echo "No latest tag yet"
-        echo "Image pulled successfully"
+    - name: Run Grype vulnerability scan
+      uses: anchore/grype-action@v0
+      with:
+        image: local-scan:${{ github.sha }}
+        output: table
+        format: json
+        output-file: grype-report.json
+        fail-on: high
 
-    - name: Run ${{ matrix.tool }} scan
-      run: |
-        case "${{ matrix.tool }}" in
-          "grype")
-            # Install Grype
-            curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
-            grype ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest -o json > grype-report.json
-            ;;
-          "trivy")
-            # Install Trivy
-            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.48.0
-            trivy image --format json --output trivy-report.json ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ;;
-          "snyk")
-            # Install Snyk
-            npm install -g snyk
-            snyk container test ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest --json > snyk-report.json
-            ;;
-        esac
-
-    - name: Upload ${{ matrix.tool }} report
+    - name: Upload Grype report
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.tool }}-report
-        path: ${{ matrix.tool }}-report.json
+        name: grype-report
+        path: grype-report.json
         retention-days: 90
 
   compliance-verification:
